--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 __pycache__
 fyp
 .DS_Store
-
+1824375.mp4
+Final Year Project - King's College London.pdf
+SNN-Architecture
+test
+fyp
+celegans-py
